	Post here any database changes ok guys? [shadowlady]

	==== progress ====
	
	Ayothaya mobs == 50% All have correct stats now ? Nope!
	Einbroch mobs == 85% But their stats could be wrong. No info about MVP RSX 0608
	Ayothaya items == 70% Added but no effect ( all are "etc" itens)
	Einbroch items == 5%
	Skill databases == celest working on them I believe.

05/17
	* Switched Tirfing and Mystelltain card effects, thanks to starlon [DracoRPG]
05/15
	* Changed Hylozoist's race to demon, thanks to Dino9021
	* Fixed Gajomart Card, thanks to starlon [DracoRPG]
	* Added missing 'amount input' packet for Sakexe 05-09 [celest]
05/12
	* Added missing 'close storage' packet for Sakexe 05-09 [celest]
05/11
	* Updated item_db (all items with use_script "pet" or "itemskill") to use
	  the new type of item (11: delay-consumed usables) [Skotlex]
	* Added the new G_ mobs with poring stats, thanks to Komurka
05/10
	* Changed 2005-05-09Sakexe's packet version to 17 [celest]
	* Fixed Merchant Class Card Combo Set bug (it was always ON) [Lupus]
	* Merchant Class Card Combo Set: added 0.1% Old Purple Box drop [Lupus]
	* Archer Class Card Combo Set: added +5% EXP bonus on killing Brute [Lupus]
	* Holy Class Card Combo Set: added +5% EXP bonus on killing Undead/Demon [Lupus]

05/09
	* Added INT +2 and Unbreakable to Crown of Mistress [DracoRPG]
	* added Sara-chan's 18th packets update [Lupus]
	* Added FULLY updated mobs skills DB by Komurka (up to Aegis Zone 8.5) [Lupus]
	* Fixed drops of Antique Firelock (thanx 2 Freya) [Lupus]
	* Added skills to Beetle King thanks to MasterOfMuppets [Lupus]
	* Started updating monsters skills according to the recent servers
	  thanks to MasterOfMuppets [Lupus]
05/08
	* Fixed Whisper Boss card, thanks to sbilly
	* Updated the packet db (removed some duplicates, corrected some packets),
	  thanks to glucose
	* Removed Sword Mastery from Alchemist's skill tree :o [DracoRPG]
05/06