@@ -1,5 +1,7 @@
 Date	Added
 05/18
+	* Added signal handler for SIGXFSZ [celest]
+	* Fixed some compile errors [celest]
 	* Fixed broken status changes [celest]
 	* Fixed Max Overthrust not working [celest]
 
