@@ -1,7 +1,7 @@
 all: char-converter
 sql: char-converter
 
-COMMON_OBJ = ../../common/obj/core.o ../../common/obj/socket.o ../../common/obj/timer.o ../../common/obj/grfio.o ../../common/obj/db.o ../../common/obj/dll.o ../../common/obj/lock.o ../../common/obj/nullpo.o ../../common/obj/malloc.o ../../common/obj/showmsg.o ../../common/obj/strlib.o ../../common/obj/utils.o
+COMMON_OBJ = ../../common/obj/core.o ../../common/obj/socket.o ../../common/obj/timer.o ../../common/obj/db.o ../../common/obj/dll.o ../../common/obj/lock.o ../../common/obj/nullpo.o ../../common/obj/malloc.o ../../common/obj/showmsg.o ../../common/obj/strlib.o ../../common/obj/utils.o
 
 char-converter: char-converter.o $(COMMON_OBJ)
 	$(CC) -o ../../../tool/$@ $^ $(LIB_S)
